--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
+*{
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+  display:flex;
+  width:100vw;
+  height: 100vh;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.leftsection{
+  width: 25vw;
+  height: 100%;
+  background-color: blue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.verticalline{
+  width: 4vw;
+  height: 100%;
+  background-color: red;
+  position: relative;
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.arrowbox{
+  width: 40px;
+  height: 40px;
+  background-color: black;
+  margin: 10px auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.vline{
+  height: 90%;
+  position: absolute;
+  bottom: 0px;
+  width: 10px;
+  position: absolute;
+  background-color:  black;
+}
+
+.rightsection{
+  background-color: violet;
+  width: 71vw;
 }
