--- a/src/App.css
+++ b/src/App.css
@@ -115,9 +115,9 @@
   position: relative;
   margin:3% 0px;
   width: 90%;
-  min-height: 90%;
+  height:fit-content;
   border: 1px solid black;
-  background-color: gray;
+  background-color: white;
   box-sizing: border-box;
 }
 
@@ -128,29 +128,50 @@
   text-align: center;
   font-size: 3em;
 }
+
+.col2 h2{
+  width: 100%;
+  height: fit-content;
+  text-align: center;
+  border:1px solid black;
+  font-size: 50px;
+  font-weight: 1px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+.col2 .description{
+  width: 100%;
+  height: fit-content;
+  border: 1px solid black;
+  font-size: 22px;
+  font-weight: 30px;
+}
+.col2 .hline{
+  
+}
 .hline{
   font-family:'Times New Roman', Times, serif;
   width: 100px;
   height: 5px;
   background-color: black;
   margin: 10px auto;
+  margin-bottom: 50px;
 }
 .window{
   width: 100%;
-  height: 80%;
+  min-height: 80%;
+  height: fit-content;
   display: flex;
   border:2px solid red;
 }
-
 .imgboxlayer{
   width:80%;
-  height: 100%;
   padding:5%;
-  border: 5px solid black;
+  border: 15px solid black;
   box-shadow: 25px 25px 10px #ffe602, -25px -25px 10px #ffe602;
 }
-
 .about{
+  min-height:80%;
   display: flex;
   align-items: center;
 }
@@ -164,12 +185,112 @@
 }
 .col2{
   width: 60%;
+  display: flex;
+  flex-direction: column;
   background-color: blueviolet;
 }
 .imgbox{
   width:100%;
   height:100%;
   border: 1px solid black;
+}
+
+.details{
+  display: flex;
+  margin:10px auto;
+}
+
+.detailbox{
+  flex:1;
+}
+
+.education .detailimg{
+  background: url("/src/pictures/boys-studying-online-unscreen.gif");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.experience .detailimg{
+  background: url("/src/pictures/rating-work-experience-unscreen.gif");
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.row h3,h4{
+  margin-bottom:10px;
+}
+.detailimg{ 
+  flex:1;
+  box-sizing: border-box;
+}
+
+.details .row{
+  width:80%;
+  min-height:120px;
+  max-height: fit-content;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: lightgray;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+}
+.details .exrow{
+  width:80%;
+  min-height:120px;
+  max-height: fit-content;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: lightgray;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: relative;
+}
+.details h3{
+  font-size: 24px;
+}
+.details h3{
+  font-size: 20px;
+}
+
+
+.skillposter{
+  width:100px;
+  height:130px;
+  padding:15px 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.skillimg{
+  width: 60px;
+  height: 60px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.skillimg:hover{
+  transition: all 1s;
+  transform: translateY(-5px) scale(1.2);
+}
+.skillbox{
+  width: 80%;
+  margin: 0px auto;
+  height: fit-content;
+  display: flex;
+  flex-wrap: wrap;
+  gap:40px;
+  justify-content: center;
+}
+.skillname{
+  text-align: center;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 ::-webkit-scrollbar {
@@ -186,4 +307,3 @@
   background: #ffe602; 
   border-radius: 5px;
 }
-
