--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,7 @@
 }
 
 .leftsection .active {
+  transition: all .5s linear;
   background-color: var(--clr-blue);
   color: var(--dark-bg);
 }
@@ -210,7 +211,10 @@
   width: 100%;
   height: 100%;
   border: 1px solid black;
-  background-color: white;
+  background-image: url("/src/pictures/Portfolio_Image.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   position: relative;
 }
 .imgbox::before {
@@ -310,30 +314,54 @@
 
 .details {
   display: flex;
+  align-items: center;
+  justify-content: space-around;
+  max-width: 1000px;
   margin: 10px auto;
 }
-.experience .detailimg{
+
+
+.experience .detailimg {
   width: 40%;
   min-height: 300px;
+  max-width: 500px;
   border-radius: 10px;
   display: grid;
-  place-items:center;
+  place-items: center;
   overflow: hidden;
 }
-.experience .detailimg img{
-  transition: all .5s linear;
+.experience .detailimg img {
+  transition: all 0.5s linear;
 }
-.experience .detailimg img:hover{
+.experience .detailimg img:hover {
   transform: scale(1.1);
 }
-.education .detailimg .imggif {
+.education .eduimgbox .imggif {
   border-radius: 4px;
-  width: clamp(90%, 95%, 100%);
+  width: clamp(150%, 160%, 170%);
   min-height: clamp(80%, 90%, 100%);
   background: url("/src/pictures/Education.gif");
   background-position: center;
   background-size: contain;
   background-repeat: no-repeat;
+}
+.edudetailbox { 
+  width: 60%;
+}
+.eduimgbox{
+  width: 40%;
+  min-height: 300px;
+  max-height: 500px;
+  border-radius: 10px;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+}
+.eduimgbox .imggif{
+  transition: var(--transition);
+}
+.eduimgbox .imggif:hover{
+  transform: scale(1.1);
 }
 
 .experience .detailimg {
@@ -407,6 +435,12 @@ sup {
   margin: 20px auto;
   background-color: var(--clr-blue);
 }
+.detailbox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
 
 .details .exrowanim:hover {
   animation: animate 2s linear infinite;
@@ -427,7 +461,7 @@ sup {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  transition: all .2s;
+  transition: all 0.2s;
 }
 .skillimg:hover {
   transform: translateY(-5px) scale(1.1);
@@ -446,7 +480,7 @@ sup {
   font-size: 18px;
   font-weight: bold;
 }
-.projectcards{
+.projectcards {
   width: 80%;
   height: fit-content;
   margin: 0px auto;
@@ -461,7 +495,7 @@ sup {
   margin: 20px auto;
   display: flex;
   justify-content: space-around;
-  gap: 20px
+  gap: 20px;
 }
 .projectimg {
   width: clamp(200px, 100%, 350px);
@@ -477,12 +511,12 @@ sup {
   background-color: grey;
   overflow: hidden;
 }
-.projectimg img{
-  transition:var(--transition);
+.projectimg img {
+  transition: var(--transition);
   border-radius: 10px;
   background-position: center;
 }
-.projectimg img:hover{
+.projectimg img:hover {
   transform: scale(1.2);
   opacity: 0.5;
 }
@@ -537,12 +571,12 @@ h4 {
   justify-content: center;
 }
 .links {
-  width: 80%;
+  min-width: 250px;
   height: 50px;
   margin: 0px auto;
   display: flex;
   justify-content: center;
-  gap: 15px;
+  gap: 25px;
 }
 .contactright {
   flex: 1;
@@ -563,26 +597,30 @@ h4 {
   background-color: var(--clr-blue);
   border-radius: 50%;
 }
-a .link {
+
+.link:hover {
+  background-color: whitesmoke;
+  color: var(--clr-blue);
+  box-shadow: 0 0 18px 4px var(--clr-blue);
+}
+.link {
+  display: flex;
   border: none;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  background-color: inherit;
-  display: grid;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
+  height: 50px;
+  width: 50px;
+  font-size: 30px;
+  border-radius: 50%;
+  margin-right: 2rem;
+  background-color: grey;
+  color: white;
+  transition: var(--transition);
+  margin: 0px auto;
 }
 .link svg {
-  width: 32px;
-  height: 32px;
-}
-.link:hover {
-  transition: var(--transition);
-  background-color: var(--clr-blue);
-  color: var(--light-bg);
-  box-shadow: 0 0 25px 5px var(--clr-blue);
-  transform: translateY(-2px);
+  background-color: inherit;
 }
 
 ::-webkit-scrollbar {
